improves star performance and fixes top margin

--- a/css/custom.css
+++ b/css/custom.css
@@ -97,6 +97,7 @@ code {
   background: #000;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   color: white;
+  margin-top: 0;
 }
 
 .get-help h2 {
