yet another tweak

--- a/css/custom.css
+++ b/css/custom.css
@@ -54,8 +54,11 @@ code {
 }
 .ramses-avatar {
   border-radius: 100%;
-  max-width: 33%;
-  padding-bottom: 20px;
+  max-width: 36%;
+  margin-bottom: 1rem;
+  -moz-box-shadow:    inset 0 0 10px #000000;
+  -webkit-box-shadow: inset 0 0 10px #000000;
+  box-shadow:         inset 0 0 10px #000000;
 }
 
 .ramses-avatar-container {
