--- a/css/custom.css
+++ b/css/custom.css
@@ -78,6 +78,11 @@ code {
   margin-top: 10rem;
 }
 
+.hero-heading-container h4 {
+  margin-top: 8rem;
+  font-weight: bold;
+}
+
 
 /* Values
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -108,6 +113,7 @@ code {
 
 .get-help h4 {
   color: #fff;
+  text-align: center;
 }
 
 /* Advantages
