--- a/css/custom.css
+++ b/css/custom.css
@@ -117,6 +117,10 @@ code {
   margin-bottom: 4rem;
 }
 
+.benefits {
+    margin-bottom:-5rem;
+}
+
 /* Advantages
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
